<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.SignInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/sg_connect"
        android:textAlignment="center"
        android:textColor="@color/blue_teal"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/error_login"
        android:textAlignment="center"
        android:textColor="@color/between_10_30"
        android:textSize="16sp"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/email_input"
        app:boxStrokeColor="@color/blue_teal">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/pass_input"
        app:boxStrokeColor="@color/blue_teal"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/sg_connect"
        android:textAllCaps="false"
        android:textSize="15sp" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/myProgBar"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:indicatorColor="@color/between_10_30"
        android:visibility="gone"
        app:indicatorName="BallClipRotatePulseIndicator" />

    <TextView
        android:id="@+id/forget_pass_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/sg_pass_forgot"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/blue_teal_200"
        android:textStyle="italic"
        android:visibility="gone" />

    <TextView
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/sg_signUp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/blue_teal"
        android:textSize="15sp" />
</LinearLayout>