<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_teal"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="100"
    tools:context=".ui.SplashScreen">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/sp_text_1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:contentDescription="@string/img_profile_btn"
        app:srcCompat="@drawable/ic_bag" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/sp_text_2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5" />
</LinearLayout>