<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="200dp"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/article_image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/img_store"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:weightSum="4">

                <TextView
                    android:id="@+id/article_title"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/montserrat_alternates"
                    android:text="@string/placeholder_store_label"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/article_price"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/montserrat_alternates"
                    android:text="@string/placeholder_store_price"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textStyle="bold" />

            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/article_point"
                style="?attr/borderlessButtonStyle"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:background="@drawable/shape_rectangle"
                android:fontFamily="@font/montserrat_alternates"
                android:gravity="center"
                android:text="@string/placeholder_store_point"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:backgroundTint="@color/between_10_30"
                app:icon="@drawable/ic_outline_monetization"
                app:iconTint="@color/white" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>