<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/cmd_state"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_weight="10"
        android:contentDescription="@string/img_profile_btn"
        android:scaleType="center"
        app:srcCompat="@drawable/ic_clock_or_check"
        app:tint="@color/cmd_in_progress" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:background="@color/cmd_in_progress" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="90"
        android:elevation="5dp"
        app:cardBackgroundColor="@color/grey_200"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/cmd_order"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_alternates"
                    android:gravity="center_vertical"
                    android:text="@string/cmd_order"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cmd_price"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_alternates"
                    android:gravity="center_vertical"
                    android:text="@string/cmd_price"
                    android:textColor="@color/between_50" />
            </LinearLayout>

            <TextView
                android:id="@+id/cmd_point"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:fontFamily="@font/montserrat_alternates"
                android:gravity="center_vertical"
                android:text="@string/cmd_point"
                android:textColor="@color/blue_teal"
                android:textStyle="bold" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>