<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_scrollFlags="scroll|exitUntilCollapsed"
    tools:context=".ui.ArticleItemActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/article_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/img_profile_btn"
                    android:scaleType="fitXY" />
            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tool"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways">

                <ImageButton
                    android:id="@+id/back_btn"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/img_profile_btn"
                    app:srcCompat="@drawable/ic_back_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="0dp"
                    android:layout_toEndOf="@id/btn_back"
                    android:fontFamily="@font/montserrat_alternates"
                    android:gravity="center"
                    android:text="@string/article_layout_title"
                    android:textAllCaps="true"
                    android:textColor="@color/blue_teal"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/article_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_srollable_bar"
        android:backgroundTint="@color/grey_200"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/article_discountPoints"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_percent_background"
                android:fontFamily="@font/montserrat_alternates"
                android:padding="5dp"
                android:text="@string/article_percent"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/article_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/article_discountPoints"
                android:fontFamily="@font/montserrat_alternates"
                android:text="@string/placeholder_store_label"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linear_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/article_label"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/article_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_alternates"
                    android:paddingStart="20dp"
                    android:paddingEnd="10dp"
                    android:text="@string/placeholder_store_price"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/article_discountPricePerPoints"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_alternates"
                    android:paddingStart="10dp"
                    android:paddingEnd="20dp"
                    android:text="@string/placeholder_store_point"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/between_10_30"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/linear_price"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:background="@color/between_50" />

            <TextView
                android:id="@+id/article_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_alternates"
                android:lineSpacingExtra="10sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/placeholder_store_desc"
                android:textColor="@color/between_50"
                android:textSize="15sp" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/article_shop_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/article_panier"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue_teal"
        app:icon="@drawable/ic_outline_shopping_cart"
        app:iconTint="@color/white" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>